src/cli/snapshots/mise__cli__outdated__tests__outdated.snap
---
source: src/cli/outdated.rs
expression: output
snapshot_kind: text
---
mise All tools are up to date
