src/cli/snapshots/mise__cli__outdated__tests__outdated_json.snap
---
source: src/cli/outdated.rs
expression: output
---
{
  "tiny": {
    "name": "tiny",
    "requested": "3",
    "current": "3.0.0",
    "bump": null,
    "latest": "3.1.0",
    "source": {
      "type": ".tool-versions",
      "path": "~/cwd/.test-tool-versions"
    }
  }
}
